--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,7 +40,7 @@
     <h4>Popular Tags</h4>
     <div class="hline"></div>
     <p>
-        {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" %}
+    {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "question" %}
             <a class="btn btn-theme" href="{{ '/category/#'  | prepend: site.baseurl  }}{{ category | first }}" role="button">{{ category | first | capitalize }} ({{ category | last | size }})</a>	         
         {% endunless %}{% endfor %}
     </p>
