Changes to Home

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h3>Show your work with this beautiful theme</h3>
-                <h1>Eyecatching Bootstrap 3 Theme.</h1>
-                <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
-                <h5>More Lorem Ipsum added here too.</h5>				
+                <h3>Welcome to Engineering Mentor 101!</h3>
+                <h1>This site provides the resources you'll need to kickstart your engineering career early on in your education.</h1>
+                <h5>Step-by-step Tutorials. Videos. Internship Databases. Anything you name.	
             </div>
-            <div class="col-lg-8 col-lg-offset-2 himg">
-                <img src="{{ "/assets/img/browser.png" | prepend: site.baseurl }}" class="img-responsive">
+            <!<div class="col-lg-8 col-lg-offset-2 himg">
+                <img src="{{ "/assets/img/hero.jpg" | prepend: site.baseurl }}" class="img-responsive">
             </div>
         </div><!-- /row -->
     </div> <!-- /container -->
