--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h3>Welcome to Engineering Mentor 101!</h3>
                 <h1>This site provides the resources you'll need to kickstart your engineering career early on in your education.</h1>
-                <h5>Step-by-step Tutorials. Videos. Internship Databases. Anything you name.	
+                <h5>Step-by-step Tutorials. Example Projects. Internship Databases. Anything you name.	
             </div>
             <!<div class="col-lg-8 col-lg-offset-2 himg">
                 <img src="{{ "/assets/img/hero.jpg" | prepend: site.baseurl }}" class="img-responsive">
