--- a/_includes/testimonial.html
+++ b/_includes/testimonial.html
@@ -2,12 +2,12 @@
     <div id="twrapback"></div>
     <div class="container centered">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+<!--             <div class="col-lg-8 col-lg-offset-2">
             <i class="fa fa-comment-o"></i>
             <p>{{ site.testimonial.message }}</p>
             <h4><br/>{{ site.testimonial.author }}</h4>
             <p>{{ site.testimonial.position }}</p>
-            </div>
+            </div> -->
         </div><! --/row -->
     </div><! --/container -->
 </div><! --/twrap -->
