--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,7 @@
                 <h5>Step-by-step Tutorials. Example Projects. Internship Databases. Anything you name.	
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
-                <!--<img src="{{ "/assets/img/hero.jpg" | prepend: site.baseurl }}" class="img-responsive">-->
-                <iframe width="420" height="315" src="//www.youtube.com/embed/JPyuH4qXLZ0?rel=0" frameborder="0" allowfullscreen></iframe>
+                <img src="{{ "/assets/img/hero.jpg" | prepend: site.baseurl }}" class="img-responsive">
             </div>
         </div><!-- /row -->
     </div> <!-- /container -->
