--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -32,6 +32,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Raleway', sans-serif;
+	line-height: 20px;
 	font-weight: 700;
 }
 
@@ -431,8 +432,7 @@ csmall {
 
 #linkswrap h3, h5 {
 	color: black;
-	font-size: .83em;
-	font-weight: bold;
+	font-weight: 700;
 }
 
 /* Blog Page */
