Links Page test

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -429,18 +429,18 @@ csmall {
     background-size: cover;
 }
 
-#linkswrap h2 {
+#linkstextwrap h2 {
 	margin-top: 0px;
 	margin-bottom: 0px;
 	line-height: 20px;
 }
 
-#linkswrap h3, h5 {
+#linkstextwrap h3, h5 {
 	color: black;
 	font-weight: 700;
 }
 
-#linkswrap h4 {
+#linkstextwrap h4 {
 	line-height: 50px;
 }
 
