--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -369,6 +369,28 @@ a:focus {
 	color: {{ site.colors.primary }}
 }
 
+/* Index Wrap */
+#indexwrap {
+	background: url(../img/blueled.jpg) no-repeat center top;
+	margin-top: -60px;
+	padding-top:0px;
+	text-align:center;
+	background-attachment: relative;
+	background-position: center center;
+	min-height: 400px;
+	width: 100%;
+	
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 /*	################################################################
 	PAGE CONFIGURATIONS
 ################################################################# */
