--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -206,11 +206,25 @@ a:focus {
 ################################################################# */
 
 #headerwrap {
-	background-color: {{ site.colors.primary }};
+	/*background-color: {{ site.colors.primary }};*/
 	min-height: 550px;
-	padding-top: 100px;
+	padding-top: 0px;
 	padding-bottom: 0px;
 	text-align: center;
+	background-attachment: relative;
+	background-position: center center;
+	min-height: 400px;
+	width: 100%;
+	
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #headerwrap h3, h5 {
