--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-12 himg">
                 <!-- <img src="{{ "/assets/img/blueled.jpg" | prepend: site.baseurl }}" class="img-responsive"> -->
-                background-image: url("/assets/img/blueled.jpg");
+                background-image: url("../img/blueled.jpg");
                 <h3>Welcome to Engineering Mentor 101!</h3>
                 <h1>This site provides the resources you'll need to kickstart your engineering career early on in your education.</h1>
                 <h5>Step-by-step Tutorials. Example Projects. Internship Databases. Anything you name.  
