--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,18 @@
 <div id="headerwrap">
+<h3>Welcome to Engineering Mentor 101!</h3>
+                    <h1>This site provides the resources you'll need to kickstart your engineering career early on in your education.</h1>
+                    <h5>Step-by-step Tutorials. Example Projects. Internship Databases. Anything you name.</h5>
+                    
     <div class="container">
         <div class="row">
-            <style>
-                background: url("../img/blueled.jpg");
-            </style>
             <div class="col-lg-12 himg">
                 <!-- <img src="{{ "/assets/img/blueled.jpg" | prepend: site.baseurl }}" class="img-responsive"> -->
             </div>
-                <!-- <div class="col-lg-8 col-lg-offset-2"> -->
+                <div class="col-lg-8 col-lg-offset-2">
                     <h3>Welcome to Engineering Mentor 101!</h3>
                     <h1>This site provides the resources you'll need to kickstart your engineering career early on in your education.</h1>
-                    <h5>Step-by-step Tutorials. Example Projects. Internship Databases. Anything you name.  
-
+                    <h5>Step-by-step Tutorials. Example Projects. Internship Databases. Anything you name.</h5>
+                </div>
         </div> <!--/row -->
     </div> <!--/container -->
 </div> <!--/headerwrap -->
