--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="headerwrap">
-<h3>Welcome to Engineering Mentor 101!</h3>
+<!-- <h3>Welcome to Engineering Mentor 101!</h3>
                     <h1>This site provides the resources you'll need to kickstart your engineering career early on in your education.</h1>
-                    <h5>Step-by-step Tutorials. Example Projects. Internship Databases. Anything you name.</h5>
+                    <h5>Step-by-step Tutorials. Example Projects. Internship Databases. Anything you name.</h5> -->
                     
     <div class="container">
         <div class="row">
