--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -211,6 +211,7 @@ a:focus {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	text-align: center;
+	vertical-align: text-bottom;
 
 	background: url(../img/blueled.jpg);
 	background-size: 100% 100%;
