--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -214,8 +214,7 @@ a:focus {
 	vertical-align: text-bottom;
 
 	background: url(../img/blueled.jpg);
-	background-size: 100% 100%;
-	margin-top: -60px;
+	/*margin-top: -60px;*/
 	background-attachment: relative;
 	background-position: center center;
 	width: 100%;
