--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
                         {{ line }} <br>
                     {% endfor %}
 
-                    {% for line in site.email %}
+                    {% for line in site.first.email %}
                         {{ line }} <br>
                     {% endfor %}
                 </p>
