--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -213,7 +213,7 @@ a:focus {
 	text-align: center;
 	/*vertical-align: text-bottom;*/
 
-	background: url(../img/blueled.jpg) no-repeat fixed;
+	background: url(../img/blueled.jpg) no-repeat scroll;
 	background-attachment: relative;
 	width: 100%;
 	
