--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
                 <div class="hline-w"></div>
                 <p>
                     {% for network in site.social %}
-                        <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-{{ network.title }}"></i></a>
+                        <a href="{{ network.url }}" class="btn-social btn-outline"></a>
                     {% endfor %}
 
                 </p>
@@ -29,6 +29,6 @@
                     {% endfor %}
                 </p>
             </div>
-        </div><! --/row -->
-    </div><! --/container -->
-</div><! --/footerwrap -->
+        </div> <!--/row -->
+    </div> <!--/container -->
+</div> <!--/footerwrap -->
