--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
                 <div class="hline-w"></div>
                 <p>
                     {% for network in site.social %}
-                        <a href="{{ network.url }}" class="btn-social btn-outline"></a>
+                        <a href="{{ network.url }}"</a>
                     {% endfor %}
 
                 </p>
