--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,10 +10,8 @@
                 <h4>Social Links</h4>
                 <div class="hline-w"></div>
                 <p>
-                    {% for network in site.social %}
-                        <a href="{{ network.url }}"</a>
-                    {% endfor %}
-
+                    <a href="https://github.com/xueyj">GitHub</a><br>
+                    <a href="https://github.com/xueyj/engmentor101">Website Source Code</a><br>
                 </p>
             </div>
             <div class="col-lg-4">
