Updated header and footer

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,10 @@
     <div class="container">
         <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p></p><p></p>
-                    <br>
-                    <br>
-                    <br>
-                    <h3>Welcome to Engineering Mentor 101!</h3>
-                    <h1>This site provides the resources you'll need to kickstart your engineering career early on in your education.</h1>
-                    <h5>Step-by-step Tutorials. Example Projects. Internship Databases. Anything you name.</h5>
+                    <br><br><br><br><br><br>
+                    <h3>Welcome to Engineering Mentorship 101!</h3>
+                    <br><h1>One-stop website for introductory engineering resources!</h1>
+                    <h4>Project Guides, Resume Tips and More!</h4>
                 </div>
         </div> <!--/row -->
     </div> <!--/container -->
