--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,9 @@
                 <h4>Social Links</h4>
                 <div class="hline-w"></div>
                 <p>
-                    <a href="https://github.com/xueyj">GitHub</a><br>
                     <a href="https://github.com/xueyj/engmentor101">Website Source Code</a><br>
+                    <a href="https://github.com/xueyj">GitHub</a><br>
+                    <a href="http://www.linkedin.com/in/xuerik/">LinkedIn</a><br>
                 </p>
             </div>
             <div class="col-lg-4">
@@ -22,9 +23,7 @@
                         {{ line }} <br>
                     {% endfor %}
 
-                    {% for line in site.Email %}
-                        {{ line }} <br>
-                    {% endfor %}
+                    <a href="mailto:dixu@ucsd.edu">dixu@ucsd.edu</a>
                 </p>
             </div>
         </div> <!--/row -->
