--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,9 +10,9 @@
                 <h4>Social Links</h4>
                 <div class="hline-w"></div>
                 <p>
-                    <a href="https://github.com/xueyj/engmentor101">Website Source Code</a><br>
-                    <a href="https://github.com/xueyj">GitHub</a><br>
-                    <a href="http://www.linkedin.com/in/xuerik/">LinkedIn</a><br>
+                    <a href="https://github.com/xueyj/engmentor101" target="_blank">Website Source Code</a><br>
+                    <a href="https://github.com/xueyj" target="_blank">GitHub</a><br>
+                    <a href="http://www.linkedin.com/in/xuerik/" target="_blank">LinkedIn</a><br>
                 </p>
             </div>
             <div class="col-lg-4">
