--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,21 +1,11 @@
 <div class="col-lg-4">
-   <!--  <h4>Search</h4>
+   <h4>Search</h4>
     <div class="hline"></div>
         <p>
             <br/>
             <input type="text" class="form-control" placeholder="Search something">
         </p>
-    <div class="spacing"></div> -->
-    
-    <!--
-    <h4>Subscribe</h4>
-    <div class="hline"></div>
-        <p>
-            <p class="rss-subscribe">Subscribe to this blog <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a>.</p>
-        </p>
     <div class="spacing"></div>
-
-    -->
 
     <h4>Categories</h4>
     <div class="hline"></div>
@@ -28,22 +18,6 @@
 
     <div class="spacing"></div>
 
-<!--
-    <h4>Recent Posts</h4>
-    <div class="hline"></div>
-        <ul class="popular-posts">
-            {% for post in site.categories['blog'] limit:4 %} 
-                <li>
-                    <a href="{{ post.url  | prepend: site.baseurl }}"><img src="{{ "/assets/img/blog/thumbs/" | prepend: site.baseurl }}{{ post.thumb }}" alt="Popular Post"></a>
-                    <p><a href="{{ post.url }}">{{ post.title }}</a></p>
-                <em>Posted on {{ post.date | date_to_string }}</em>
-            </li>
-            {% endfor %} 
-        </ul>
-
-    <div class="spacing"></div>
-
--->
 
     <h4>Popular Tags</h4>
     <div class="hline"></div>
