--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,4 @@
 <div class="col-lg-4">
-   <h4>Search</h4>
-    <div class="hline"></div>
-        <p>
-            <br/>
-            <input type="text" class="form-control" placeholder="Search something">
-        </p>
-    <div class="spacing"></div>
-
     <h4>Categories</h4>
     <div class="hline"></div>
     {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "question" %}
@@ -16,8 +8,7 @@
         </p>
     {% endunless %}{% endfor %}
 
-    <div class="spacing"></div>
-
+<!--     <div class="spacing"></div>
 
     <h4>Popular Tags</h4>
     <div class="hline"></div>
@@ -25,5 +16,5 @@
     {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "question" %}
             <a class="btn btn-theme" href="{{ '/category/#'  | prepend: site.baseurl  }}{{ category | first }}" role="button">{{ category | first | capitalize }} ({{ category | last | size }})</a>	         
         {% endunless %}{% endfor %}
-    </p>
+    </p> -->
 </div>
