--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -51,6 +51,12 @@ img {
 	max-width: 100%;
 }
 
+img.centered {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 a { 
     color:{{ site.colors.link }};
     padding: 0;
@@ -325,13 +331,6 @@ a:focus {
 
 #footerwrap i:hover {
 	color: {{ site.colors.primary }}
-}
-
-/* Post wrap */
-#postwrap {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 /*	################################################################
