--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -222,6 +222,7 @@ a:focus {
 	background: url(../img/blueled.jpg) no-repeat scroll;
 	background-attachment: relative;
 	width: 100%;
+	max-height: 100%;
 	
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
