--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -213,7 +213,7 @@ a:focus {
 
 #headerwrap {
 	/*background-color: {{ site.colors.primary }};*/
-	
+	min-height: 417px;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	text-align: center;
@@ -221,8 +221,7 @@ a:focus {
 
 	background: url(../img/blueled.jpg) no-repeat scroll;
 	background-attachment: relative;
-	max-width: 100%;
-	max-height: 100%;
+	width: 100%;
 	
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
