--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -87,6 +87,7 @@ a:focus {
 
 .centered {
 	text-align: center
+	max-height: 400px;
 }
 
 /*	################################################################
