--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -19,5 +19,11 @@ layout: default
 
         </div> <!--/col-lg-12 -->
 
+
+        <div class="col-lg-6">
+
+
+        </div>
+
     </div> <!--/row -->
 </div> <!--/container -->
