--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -90,6 +90,10 @@ a:focus {
 	max-height: 400px;
 }
 
+.blogpost {
+	max-width: 300px;
+}
+
 /*	################################################################
 	BOOTSTRAP MODIFICATIONS & TWEAKS
 ################################################################# */
