--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -21,7 +21,7 @@ layout: default
 
 
         <div class="col-lg-6">
-
+            <p><img class="blogpost" src="{{ "/assets/img/blog/how-to-github-website/1.jpg""></p>
 
         </div>
 
