--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -91,7 +91,7 @@ a:focus {
 }
 
 .blogpost {
-	max-width: 300px;
+	/*max-width: 300px;*/
 }
 
 /*	################################################################
