--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <br><br><br><br><br><br>
                     <h3>Welcome to Engineering Mentorship 101!</h3>
-                    <br><h1>One-stop website for introductory engineering resources!</h1>
-                    <br><h3>Project Guides, Resume Tips and More!</h3>
+                    <br><br><h1>One-stop website for introductory engineering resources!</h1>
+                    <br><br><br><br><h3>Project Guides, Resume Tips and More!</h3>
                 </div>
         </div> <!--/row -->
     </div> <!--/container -->
