--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -92,6 +92,7 @@ a:focus {
 
 .blogpost {
 	/*max-width: 300px;*/
+	max-height: 400px;
 	display: block;
     margin-left: auto;
     margin-right: auto
