--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -381,7 +381,7 @@ csmall {
 
 /* Links Page */
 #linkswrap {
-	background: url(../img/links.jpg) no-repeat center top;
+	background: url(../img/links.jpg) no-repeat center center;
 	margin-top: -60px;
 	padding-top:0px;
 	text-align:center;
