--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -381,13 +381,13 @@ csmall {
 
 /* Links Page */
 #linkswrap {
-	background: url(../img/links.jpg) no-repeat center center;
-	margin-top: -60px;
+	background: url(../img/links.jpg) no-repeat scroll center center;
+	/*margin-top: -60px;*/
 	padding-top:0px;
-	text-align:center;
+	/*text-align:center;*/
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 400px;
+	min-height: 550px;
 	width: 100%;
 	
     -webkit-background-size: 100%;
