--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -399,6 +399,9 @@ csmall {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    color: white;
+    text-align: left;
 }
 
 #linkstextwrap h2 {
