--- a/_includes/linker.html
+++ b/_includes/linker.html
@@ -1,7 +1,7 @@
 <div id="linkswrap">
     <div class="container">
         <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-8">
                     <br><br><br><br><br><br>
                     <h3>Links</h3>
                 </div>
