--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -283,6 +283,9 @@ a:focus {
 
 #portfoliowrap .img-responsive {
 	max-height: 500px;
+	display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
 .portfolio {
